--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 anyhow = "1.0.86"
 
 rsa = { version = "0.9.6", features = ["sha2"] }
+base16ct = { version = "0.2.0", features = ["alloc"] }
 rand = "0.8.5"
+chrono = { version = "0.4.38", features = ["serde"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
