--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rand = "0.8.5"
 chrono = { version = "0.4.38", features = ["serde"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+rayon = "1.10.0"
